# west

./: .codecov.yml  .gitignore  .shippable.yml  MAINTAINERS.rst  MANIFEST.in  README.rst  WINE.md  bandit.yaml  pyproject.toml  requirements-install-build.txt  requirements-install-tox.txt  requirements-tox.txt  requirements.txt  setup.py  tests_requirements.txt  tox.ini  tox_deps.txt
.github/: dependabot.yml  http_env_block.conf
.github/workflows/: codeql.yml  codeql.yml.disabled  dependency-review.yml  dependency-review.yml.disabled  docs.yml  format.yml  format.yml.disabled  package.yml  release.yml  release.yml.disabled  scorecards.yml  test-distros.yml  test.yml  test.yml.disabled
doc/: conf.py  index.rst  install.rst  manifest.rst
doc/_static/css/: custom.css
doc/_templates/: layout.html
docker-testing/: README.rst  compose.yaml  in-container-test.sh  run-tests.sh
docker-testing/arch/: Dockerfile
docker-testing/debian/: Dockerfile
docker-testing/debian-12/: Dockerfile
docker-testing/debian-testing/: Dockerfile
docker-testing/fedora/: Dockerfile
docker-testing/fedora-38/: Dockerfile
docker-testing/ubuntu-22.04/: Dockerfile
docker-testing/ubuntu-23.04/: Dockerfile
scripts/: west-completion.bash
src/bootstrap/: main.py
src/west/: backports.py  build.py  cmake.py  commands.py  config.py  configuration.py  log.py  main.py  manifest-schema.yaml  manifest-schema.yml  manifest.py  util.py  version.py  west-commands-schema.yaml
src/west/_bootstrap/: main.py  version.py  west-schema.yml
src/west/app/: README.txt  config.py  main.py  project.py
src/west/cmd/: build.py  debug.py  flash.py  project.py  run_common.py
src/west/commands/: __init__.py  build.py  command.py  config.py  debug.py  flash.py  project.py  run_common.py  west-commands-schema.yml
src/west/runner/: arc.py  bossac.py  core.py  dfu.py  esp32.py  intel_s1000.py  jlink.py  nios2.py  nrfjprog.py  nsim.py  openocd.py  pyocd.py  qemu.py  xtensa.py
src/west/runners/: __init__.py  arc.py  blackmagicprobe.py  bossac.py  core.py  dfu.py  esp32.py  intel_s1000.py  jlink.py  nios2.py  nrfjprog.py  nsim.py  openocd.py  pyocd.py  xtensa.py
tests/: conftest.py  test_alias.py  test_commands.py  test_config.py  test_extension_commands.py  test_help.py  test_main.py  test_manifest.py  test_project.py  test_project_caching.py
tests/manifests/: invalid_absolute_project_path.yml  invalid_duplicate_name.yml  invalid_empty.yml  invalid_ill_defined_project.yml  invalid_name_backslash.yml  invalid_name_slash.yml  invalid_no_project_named_manifest.yml  invalid_no_projects.yml  invalid_no_remotes.yml  invalid_project_in_west_dir.yml  invalid_project_in_west_reldir.yml  invalid_project_in_west_relsubdir.yml  invalid_project_in_west_subdir.yml  invalid_project_path_escapes.yml  invalid_remote_and_url.yml  invalid_repo_path_and_url.yml  invalid_submodule_no_path.yml  invalid_west_commands_1.yml
tests/runner/: conftest.py  test_imports.py  test_nrfjprog.py
tests/west/commands/: conftest.py  empty_config.py  test_config.py  test_project.py
tests/west/manifest/: invalid_bad_default_remote.yml  invalid_duplicate_project_path.yml  invalid_ill_defined_project.yml  invalid_ill_defined_remote.yml  invalid_no_projects.yml  invalid_no_remotes.yml  invalid_reserved_name_manifest.yml  invalid_reserved_name_west.yml  invalid_restricted_project_normalized_path.yml  invalid_restricted_project_path.yml  invalid_restricted_project_sub_path.yml  invalid_too_flat.yml  invalid_west_commands_2.yml  invalid_west_commands_3.yml  invalid_west_section.yml  test_manifest.py
tests/west/project/: __init__.py  manifest.yml  test_project.py
tests/west/runner/: conftest.py  test_pyocd.py
tests/west/runners/: conftest.py  test_imports.py  test_nrfjprog.py  test_pyocd.py
util/: compile-requirements.sh
west/: main.py
west/cmd/: git.py
west/runner/: nrfjprog.py
