[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "west"
version = "1.5.0"
authors = [{name = "Zephyr Project", email = "devel@lists.zephyrproject.org"}]
description = "Zephyr RTOS Project meta-tool"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
]
requires-python = ">=3.9"
dependencies = [
    "colorama",
    "PyYAML>=5.1",
    "pykwalify",
    "packaging",
]

[project.license]
file = "LICENSE"

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.urls]
Homepage = "https://github.com/zephyrproject-rtos/west"

[project.scripts]
west = "west.app.main:main"

[tool.setuptools]
package-dir = {"" = "src"}
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.coverage.run]
relative_files = true
omit = [
  "*/tmp/*",
]

[tool.coverage.report]
omit = [
  "*/tmp/*",
]

[tool.coverage.paths]
source = [
  "src/west",
  "*/site-packages/west",
  "*/src/west",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = [
  "B",   # flake8-bugbear
  "E",   # pycodestyle errors
  "F",   # Pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "W",   # pycodestyle warnings
]

[tool.ruff.format]
quote-style = "preserve"
line-ending = "lf"
